--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -57,11 +57,9 @@ class Singleton(type):
 class QtSingleton(type(QObject), Singleton):...
 
 if __name__ == "__main__":
-    class YourClass(QWidget, metaclass=QtSingleton):
-    
-        def __init__(self):
-            print("YourClass singleton created")
-
+    class YourClass(QWidget, metaclass=QtSingleton):...
+    import sys
+    app = QApplication(sys.argv)
     yc1 = YourClass()
     yc2 = YourClass()
     print(yc1 == yc2)
@@ -85,21 +83,12 @@ def Singleton(cls):
         return instance
     return wrap
 
-@Singleton
-class Spam:
-
-    def __init__(self, name, age):
-        self.name = name
-        self.age = age
-
-    def __repr__(self):
-        return f"<Spam {self.name} {self.age}>"
-
 if __name__ == "__main__":
-    foo = Spam("Foo", 28)
-    print(foo)
-    bar = Spam()
-    print(bar)
+    @Singleton
+    class YourClass:...
+    yc1 = YourClass()
+    yc2 = YourClass()
+    print(yc1 == yc2)
 ```
 
 ### 还有一种在定义的时候就被立即实例化的单例元类
@@ -114,8 +103,6 @@ if __name__ == "__main__":
 # 测试版本：Python3.10.8
 
 class Singleton(type):
-
-    class NotCompletelyInstantiatedError(Exception):...
 
     def __new__(cls, name, bases, meta):
         meta["__call__"] = lambda self: self
@@ -135,8 +122,7 @@ class SingletonWithInstance(Singleton):
 
 if __name__ == "__main__":
 
-    class YourClass(metaclass=SingletonWithInstance):
-
-        def __init__(self):
-            print("Your class is instantiated")
+    class YourClass(metaclass=SingletonWithInstance):...
+    yc = YourClass()
+    print(YourClass.instance == yc)
 ```
