--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -26,9 +26,7 @@ class Singleton(type):
 
 if __name__ == "__main__":
     class YourClass(metaclass=Singleton): ...
-    yc1 = YourClass()
-    yc2 = YourClass()
-    print(yc1 == yc2)
+    print(YourClass.instance == YourClass())
 ```
 
 ### 实践中你可能会遇到元类冲突
@@ -60,9 +58,7 @@ if __name__ == "__main__":
     class YourClass(QWidget, metaclass=QtSingleton):...
     import sys
     app = QApplication(sys.argv)
-    yc1 = YourClass()
-    yc2 = YourClass()
-    print(yc1 == yc2)
+    print(YourClass.instance == YourClass())
 ```
 
 ### 创建单例还可以使用装饰器实现
@@ -86,9 +82,7 @@ def Singleton(cls):
 if __name__ == "__main__":
     @Singleton
     class YourClass:...
-    yc1 = YourClass()
-    yc2 = YourClass()
-    print(yc1 == yc2)
+    print(YourClass.instance == YourClass())
 ```
 
 ### 还有一种在定义的时候就被立即实例化的单例元类
@@ -123,6 +117,5 @@ class SingletonWithInstance(Singleton):
 if __name__ == "__main__":
 
     class YourClass(metaclass=SingletonWithInstance):...
-    yc = YourClass()
-    print(YourClass.instance == yc)
+    print(YourClass.instance == YourClass())
 ```
