--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -82,7 +82,7 @@ def Singleton(cls):
 if __name__ == "__main__":
     @Singleton
     class YourClass:...
-    print(YourClass.instance == YourClass())
+    print(YourClass() == YourClass())
 ```
 
 ### 还有一种在定义的时候就被立即实例化的单例元类
