--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -26,7 +26,7 @@ class Singleton(type):
 
 if __name__ == "__main__":
     class YourClass(metaclass=Singleton): ...
-    print(YourClass.instance == YourClass())
+    print(YourClass() == YourClass())
 ```
 
 ### 实践中你可能会遇到元类冲突
@@ -58,7 +58,7 @@ if __name__ == "__main__":
     class YourClass(QWidget, metaclass=QtSingleton):...
     import sys
     app = QApplication(sys.argv)
-    print(YourClass.instance == YourClass())
+    print(YourClass() == YourClass())
 ```
 
 ### 创建单例还可以使用装饰器实现
@@ -117,5 +117,5 @@ class SingletonWithInstance(Singleton):
 if __name__ == "__main__":
 
     class YourClass(metaclass=SingletonWithInstance):...
-    print(YourClass.instance == YourClass())
+    print(YourClass() == YourClass())
 ```
