--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -63,7 +63,7 @@ if __name__ == "__main__":
 
 ### 创建单例还可以使用装饰器实现
 
-使用装饰器实现的单例，可以拥有更低的耦合度，也不会遭遇元类冲突等诸多问题，但是会导致类的名称变成一个函数对象。
+使用装饰器实现的单例，可以拥有更低的耦合度，也不会遭遇元类冲突等诸多问题，但是会导致类的名称变成一个函数对象，所以你再也没法在类里面寻找 `instance` 这个单例属性了。
 
 ```python
 # 测试版本：Python3.10.8
