--- a/Python进阶技巧/编写一个递归下降分析器.md
+++ b/Python进阶技巧/编写一个递归下降分析器.md
@@ -70,7 +70,7 @@ class Lexer:
             sttype, ttext = m.lastgroup, m.group()
             ttype = Token.Type[sttype]
             if ttype == Token.Type.ILLEGAL:
-                raise SyntaxError(f"Illegal character '{tokentext}'\n")
+                raise SyntaxError(f"Illegal character '{ttext}'\n")
             mode = self.modes[ttype]
             func = mode.func
             tok = func(ttype, ttext)
