--- a/Python进阶技巧/类型注解.md
+++ b/Python进阶技巧/类型注解.md
@@ -1,10 +1,6 @@
 Python3类型注解
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 ### 静态检查
 
 在使用Python进行开发的时候，当项目扩张到一定程度，修改的代码就很难进行全量测试了，然而对于解释执行的脚本语言来说，很多错误都只能在运行的时候才能发现，非常浪费时间，不像编译型语言可以在编译期解决掉绝大多数问题。
@@ -12,6 +8,8 @@ __测试版本__：Python3.10.8
 Python3的类型注解，并不影响运行，但是在使用诸如mypy这类静态检查工具检查的时候会对不匹配的类型进行报错，及时发现可能的风险。
 
 ```python
+# 测试版本：Python3.10.8
+
 def add(a: int, b: int) -> int:
     return a + b
 
@@ -31,6 +29,8 @@ mypy script.py
 ### 简单数据类型注解
 
 ```python
+# 测试版本：Python3.10.8
+
 # 整数
 def add_i(a: int, b: int) -> int:
     return a + b
@@ -51,6 +51,8 @@ def strcat(a: str, b: str) -> str:
 `List[T]` 表示任意长度的指定类型元素的列表。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import List
 
 # list，返回任意长度的列表
@@ -77,6 +79,8 @@ def repeat_c(num: int) -> List[int]:
 `Tuple[T1, T2, T3, ...]` 表示指定数量、类型的元组。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Tuple
 
 # tuple，返回任意长度的元组
@@ -108,6 +112,8 @@ def repeat_e(num: int) -> TripleInt:
 `Set[T]` 表示任意长度的指定类型元素的集合。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Set
 
 # set，返回任意长度的集合
@@ -130,6 +136,8 @@ def range_c(num: int) -> Set[int]:
 集合无序所以不算序列，但是它可以使用collections.abc.Iterable，因为它也是可迭代对象。
 
 ```python
+# 测试版本：Python3.10.8
+
 from collections.abc import Sequence
 
 def print_seq(seq: Sequence) -> None:
@@ -154,6 +162,8 @@ print_seqf((1.0, 2.0, 3.0))
 使用 `Dict[TK, TV]` 来定义字典的类型信息。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Dict
 
 def print_pairs(d: Dict[str, int]):
@@ -170,6 +180,8 @@ Callable类型的注解是一个列表，里面有两个元素，第一个元素
 `Callable[[ArgType1, ArgType2, ArgType3, ...], ReturnType]`
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Tuple
 from typing import Callable
 
@@ -213,6 +225,8 @@ process(func1, func2, 1, 2)
 Union的参数列表可以放入多个数据类型： `Union[T1, T2, T3, ...]` 。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Union
 def introduce(name: str, age: Union[int, None]) -> str:
     return "My name is {0}, I'm {1} years old.".format(
@@ -231,6 +245,8 @@ Optional的参数列表只可以放入一个数据类型： `Optional[T]` 。
 `Optional[T]` 相当于 `T | None` 。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Union
 from typing import Optional
 
@@ -250,6 +266,8 @@ introduce("Bar", None)
 如果指定的参数或返回值会是任意类型，可以使用Any类型。
 
 ```python
+# 测试版本：Python3.10.8
+
 from random import randint
 from typing import Any
 
@@ -265,6 +283,8 @@ random(randint(0, 255))
 None的类型虽然是NoneType，它在types模块里，但是不需要用NoneType进行注解，直接使用None即可。
 
 ```python
+# 测试版本：Python3.10.8
+
 def nothing(anything: None):
     pass
 
@@ -276,6 +296,8 @@ nothing(None)
 有时候可能需要标明一个函数可能不会返回，可以用NoReturn。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Union
 from typing import NoReturn
 
@@ -292,6 +314,8 @@ test(1)
 使用NamedTuple可以得到类似强类型结构体的效果。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import NamedTuple
 
 Point = NamedTuple('Point', [('x', int), ('y', int)])
@@ -305,6 +329,8 @@ p2 = Point(x = 128, y = 256)
 命名字典也具有类似强类型结构体的效果。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import TypedDict
 
 class Point2D(TypedDict):
@@ -321,6 +347,8 @@ assert Point2D(x=1, y=2, label='first') == dict(x=1, y=2, label='first')
 ### 将数据类型定义为新类型
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import NewType
 
 UserId = NewType('UserId', int)
@@ -344,6 +372,8 @@ admin = Admin(UserId(1))
 _Python3.11新增了LiteralString，可以用于表示参数必须是字符串字面量。_
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import IO
 from typing import Any
 from typing import Literal
@@ -363,6 +393,8 @@ fp.close()
 常规类型注解都表示该类型实例，如果是类型本身呢，用Type[cls]。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Type
 
 class A:
@@ -385,6 +417,8 @@ print_a(a)
 ### 函数重载
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import overload
 from typing import Tuple
 
@@ -430,6 +464,8 @@ print(vector3(1, 2, 3))
 typing中的final装饰器装饰过的方法将无法被重写，被final装饰过的类将无法被继承。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import final
 
 class A:
@@ -452,6 +488,8 @@ b.say()
 可以用接口类继承Protocal，并且一旦使用了 `runtime_checkable` 装饰了接口类，实现了接口类的实例就可以在运行时使用 `isinstance` 和 `issubclass` 。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Protocol
 from typing import runtime_checkable
 
@@ -496,6 +534,8 @@ print(isinstance(stu, IPerson)) # True
 Python3.11在typing中提供了 `Self` 类型，用于表示类本身，低版本可以使用 `"ClassName"` 来表示即将出现的类。。
 
 ```python
+# 测试版本：Python3.10.8
+
 class A:
 
     __instance = None
@@ -512,6 +552,8 @@ a = A.instance()
 遇到循环依赖的情况，也是一样的处理方式。
 
 ```python
+# 测试版本：Python3.10.8
+
 from typing import Set
 
 class Server:
@@ -547,6 +589,8 @@ print(server.clients())
 Python3.7以后，也可以用 `from __future__ import annotations` 来假装类存在。
 
 ```python
+# 测试版本：Python3.10.8
+
 from __future__ import annotations
 
 class A:
@@ -569,6 +613,8 @@ a = A.instance()
 * __单行忽略__ ：可以在行尾注释中写上 `# type: ignore` ，就会忽略该行的检查。
 
   ```python
+  # 测试版本：Python3.10.8
+
   import rt # type: ignore
 
   class MyType(rt.Geometry):
@@ -582,6 +628,8 @@ a = A.instance()
 * __忽略后续脚本__ ：可以在行的前面添加一行注释 `# type: ignore` ，就会忽略后续的检查。
 
   ```python
+  # 测试版本：Python3.10.8
+
   # type: ignore
   var1: str = 123
   var2: str = 234
@@ -590,6 +638,8 @@ a = A.instance()
 * __忽略代码块__ ：或者使用typing中的装饰器 `no_type_check` 来忽略具体代码块的检查。
 
   ```python
+  # 测试版本：Python3.10.8
+
   @no_type_check
   def error_function(param: int) -> int:
       var: str = param
