--- a/Python进阶技巧/创建常量类.md
+++ b/Python进阶技巧/创建常量类.md
@@ -1,15 +1,13 @@
 创建常量类
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 Python中并没有常量的概念，比较优雅的方式就是实用元类来控制。
 
 类是元类的实例，通过在元类中重载 __写__ 数据的方法，拦截数据的二次覆盖来实现。
 
 ```python
+# 测试版本：Python3.10.8
+
 import os
 
 class ConstMeta(type):
@@ -17,15 +15,6 @@ class ConstMeta(type):
     class ConstError(Exception):...
 
     class NotInstantiableError(Exception):...
-
-    MAGIC_METHODS = ("_init",)
-
-    def __init__(self, name, bases, meta):
-        super().__init__(name, bases, meta)
-        vs = vars(self)
-        for method in self.__class__.MAGIC_METHODS:
-            if method in vs:
-                getattr(self, method)()
 
     def __setattr__(self, key ,value):
         """
@@ -55,8 +44,7 @@ class ConstMeta(type):
             )
         return prefix + "\n".join(list(map(
             lambda item: str(item),
-            filter(lambda item: (not item[0].startswith("__")) and
-                                (not item[0] in self.__class__.MAGIC_METHODS),
+            filter(lambda item: (not item[0].startswith("__")),
                    vars(self).items()))))
 
 if __name__ == "__main__":
@@ -66,14 +54,11 @@ if __name__ == "__main__":
 
         PLATFORM_3DSMAX = "3dsmax"
         PLATFORM_MAYA   = "maya"
-
-        @classmethod
-        def _init(cls):
-            cls.PLATFORM = cls.PLATFORM_3DSMAX
-            cls.VERSION = namedtuple("Version",
-                 ("major", "minor", "micro", "tag", "extra"),
-                 defaults=(1, 0, 0, "release", ""),
-                 )()
+        PLATFORM = PLATFORM_3DSMAX
+        VERSION = namedtuple("Version",
+             ("major", "minor", "micro", "tag", "extra"),
+             defaults=(1, 0, 0, "release", ""),
+             )()
 
     print(Globals)
     print(Globals.VERSION)
