--- a/Python进阶技巧/列表视图.md
+++ b/Python进阶技巧/列表视图.md
@@ -1,10 +1,6 @@
 列表视图
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 Python中没有指针的概念，如何才能获得一个列表的视图呢。
 
 一种方法是使用numpy数组，其切片不会自动生成一个新列表，而是获得原始列表的视图。
@@ -12,6 +8,8 @@ Python中没有指针的概念，如何才能获得一个列表的视图呢。
 另一种方法是使用一个自定义的类，重载其 `__getitem__` 和 `__setitem__` 方法。
 
 ```python
+# 测试版本：Python3.10.8
+
 class ListView:
 
     class ListViewIterator:
@@ -99,5 +97,4 @@ view2 = ListView(lst, 2, -2)
 # [2, 3, 4, 5, 6, 7]
 view2[::2] = list(map(lambda n: n ** 2, view2[::2]))
 # <ListView [4, 3, 16, 5, 36, 7]>
-
 ```
