--- a/Python进阶技巧/动态加载模块.md
+++ b/Python进阶技巧/动态加载模块.md
@@ -1,13 +1,11 @@
 动态加载模块
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 ### \_\_import\_\_代替import
 
 ```python
+# 测试版本：Python3.10.8
+
 sys = __import__("sys")
 print(sys.version_info)
 # sys.version_info(major=3, minor=10, micro=8, releaselevel='final', serial=0)
@@ -16,6 +14,8 @@ print(sys.version_info)
 ### 根据输入模块路径动态加载模块
 
 ```python
+# 测试版本：Python3.10.8
+
 import os
 import importlib.util
 
