--- a/Python进阶技巧/动态执行代码.md
+++ b/Python进阶技巧/动态执行代码.md
@@ -1,10 +1,6 @@
 动态执行代码
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 Python代码只是字符串，对于已经写入到py文件中的代码，在读入脚本文件的时候自动编译为字节码；对于运行时动态生成的代码，可以在运行时动态编译运行。
 
 
@@ -15,12 +11,16 @@ Python可以使用内置函数 `eval` 和 `exec` 来动态执行代码片段。
 * __eval__ 用于执行表达式，并返回表达式的结果。
 
   ```python
+  # 测试版本：Python3.10.8
+  
   eval("1 + 2") # 3
   ```
 
 * __exec__ 用于执行一系列复杂语句。
 
   ```python
+  # 测试版本：Python3.10.8
+  
   code = """
   def add(a, b):
       return a + b
@@ -35,6 +35,8 @@ Python可以使用内置函数 `eval` 和 `exec` 来动态执行代码片段。
 动态执行代码默认使用当前的名称作用域： `globals` 和 `locals` 。有时候也容易被恶意代码篡改工作机器上的环境，所以eval和exec都可以手动传入globals和locals。
 
 ```python
+# 测试版本：Python3.10.8
+
 code = """
 def add(a, b):
     return a + b
@@ -51,6 +53,8 @@ print(res) # NameError: name 'res' is not defined
 编译过的二进制对象也可以提交给 `eval` 和 `exec` 来执行。
 
 ```python
+# 测试版本：Python3.10.8
+
 expr = "1 + 2"
 bin_expr = compile(expr, "unknown.py", "eval")
 eval(bin_expr) # 3
