--- a/Python进阶技巧/动态生成函数.md
+++ b/Python进阶技巧/动态生成函数.md
@@ -1,13 +1,11 @@
 动态生成函数
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 ### Python中动态生成函数可以使用 `lambda` 关键字。
 
 ```python
+# 测试版本：Python3.10.8
+
 def func_gen(hint):
     assert hint in ("-" , "+")
     if hint == "-":
@@ -24,6 +22,8 @@ add(1, 2) # 3
 ### 在循环中动态生成函数的常见错误
 
 ```python
+# 测试版本：Python3.10.8
+
 # 错误代码
 
 def func_gen(n):
@@ -54,6 +54,8 @@ graph LR
 `nonlocal` 是闭包引用的变量的作用域，在闭包函数内也属于 `locals()` ，其保存在闭包的函数对象身上。
 
 ```python
+# 测试版本：Python3.10.8
+
 import dis
 
 def func_gen(n):
@@ -80,6 +82,8 @@ graph TB
 所以我们通过dis模块将字节码解析出来，能看到 `LOAD_FAST` 在加载函数形参，看到 `LOAD_DEREF` 在加载闭包引用的外部变量。
 
 ```python
+# 测试版本：Python3.10.8
+
 import dis
 
 def func_gen(n):
@@ -101,6 +105,8 @@ dis.dis(f)
 为了让函数的返回值分别是 `0 1 4` ，我们需要另一条规则：函数的默认参数是在函数定义时赋值的。
 
 ```python
+# 测试版本：Python3.10.8
+
 # 正确代码
 
 def func_gen(n):
